[package]
name = "hacking-rust-lightning"
version = "0.1.0"
authors = ["Antoine Riard <ariard@student.42.fr>"]

[dependencies]
rand = "0.4"
lightning = { path = "../rust-lightning" }
bitcoin = "0.18"
hyper = "0.12"
futures = "0.1"
bitcoin_hashes = "0.3"
serde = "1"
serde_json = "1"
serde_derive = "1"
base64 = "0.9"
tokio = "0.1"
tokio-codec = "0.1"
tokio-fs = "0.1"
tokio-io = "0.1"
secp256k1 = "0.12"
